<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/buttonSdk"
        android:layout_width="72dp"
        android:layout_height="42dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="?selectableItemBackgroundBorderless"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/hwsecurity_sdk_url_logo" />

    <ImageView
        android:id="@+id/imageUsb"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="48dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageNfc"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hwsecurity_usb_start"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/imageNfc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="48dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageUsb"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hwsecurity_nfc_start"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textNfcDisabled"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/hwsecurity_ui_nfc_disabled"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/imageUsb"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNfc"
        app:srcCompat="@drawable/hwsecurity_nfc_start"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonNfcDisabled"
        style="@style/HwSecurity.Dialog.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="48dp"
        android:text="@string/hwsecurity_ui_nfc_disabled_button"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageUsb"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNfcDisabled"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textUsb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hwsecurity_ui_start_usb"
        app:layout_constraintBottom_toTopOf="@+id/imageUsb"
        app:layout_constraintEnd_toEndOf="@+id/imageUsb"
        app:layout_constraintStart_toStartOf="@+id/imageUsb" />

    <TextView
        android:id="@+id/textNfc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hwsecurity_ui_start_nfc"
        app:layout_constraintBottom_toTopOf="@+id/imageNfc"
        app:layout_constraintEnd_toEndOf="@+id/imageNfc"
        app:layout_constraintStart_toStartOf="@+id/imageNfc" />

</androidx.constraintlayout.widget.ConstraintLayout>